Revision history for Perl module TestRail::API

0.041 2017-06-XX TEODESIAN
    - Fix MCE usage issue with confusion based on array -> hash inputs in TestRail::Utils::Find
    - Fix issue where Test plans were not recorded in the raw output of a case.

0.040 2017-05-24 TEODESIAN
    - Fix performance issue in TestRail::Utils::Find::FindTests
    - Fix strange testsuite bug caused by regressions in MCE
    - Allow filtering in TestRail::API::getPlans
    - Clone refs of cached values so that users can't corrupt it

0.039 2017-03-07 TEODESIAN
    - Fix issue where follow_post_redirect could not be passed to constructor
    - Add getRunResults, getRunResultsPaginated Methods in TestRail::API
    - Cache connections by default for speedups
    - Cache getTests() for getTestByName()
    - Fix warnings when testrail-results encounters 'assigned' results
    - make --cachefile a multi argument in testrail-results
    - add the --perfile argument to testrail-results
    - add the --merged argument to testrail-results
    - Add platform information and guidance on results_by_version to testrail-results

0.038 2017-01-23 TEODESIAN
    - Optimize TestRail::Utils::Find::getResults and testrail-results
    - Add ability to follow POST redirects
    - Don't print stack traces during constructor errors, this can leak auth info into logs
    - Don't override filename in TAP Parser if we already have it
    - Fix issue where non-standard status overrides were not possible
    - Add finder callback to TestRail::Utils::FindTests
    - Add testsuite_id filter to TestRail::API::getChildRunByName
    - Add defect metrics to testrail-results
    - Add version metrics to testrail-results

0.037 2016-08-10 TEODESIAN
    - Fix incorrect POD for TestRail::API::createRunInPlan
    - Add testrail-results binary and TestRail::Utils::Find::getResults.
    - Add TestRail::API::getChildSections, and modify Test::Rail::Parser to recursively search passed sections when spawning runs